add agent file collect
add testcase for agent file collect

add testcase for function get_file_info;
